fixed picker icon screen cut off issue

--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,7 @@ input, button{
 
 #pickerIcon {
 	position: fixed;
+	right: 10px;
 	bottom: 10px;
 	z-index: 2;
 }
